<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WQX Emulator</string>
    <string name="action_restart">Restart</string>
    <string name="action_speed_up">SpeedUp</string>
    <string name="action_load">Load</string>
    <string name="action_save">Save</string>
    <string name="action_quit">Quit</string>
    <string name="perf_text" translatable="false">FPS: %d, Cycles: %d, Speed: %d%%</string>
    <string name="factory_reset">Factory reset</string>
    <string name="factory_reset_message">Would you like to reset to factory state?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="save_states_setting">Save states</string>
    <string name="save_states_setting_summary_on">Save states automatically upon exiting</string>
    <string name="save_states_setting_summary_off">Do not save states automatically upon exiting</string>

    <string name="theme_setting_title">Theme</string>
    <string name="theme_follow_system">Follow system</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
</resources>