<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_restart"
        android:title="@string/action_restart"/>
    <item
        android:id="@+id/action_load"
        android:title="@string/action_load"/>
    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"/>
    <item
        android:checkable="true"
        android:id="@+id/action_speed_up"
        android:title="@string/action_speed_up"/>
    <item
        android:id="@+id/action_factory_reset"
        android:title="@string/factory_reset"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"/>
    <item
        android:id="@+id/action_quit"
        android:title="@string/action_quit"/>

</menu>